v0.4.1
Internal bugfix update for example mod extension.

v0.4.0
Certain forge actions are now gated behind boss kills.
Added a close button to the forge UI.
Forge UI can now be moved by dragging anywhere except the buttons.
Added a melee weapon suffix that has a chance to fire fireballs on hit.

v0.3.2
Fixed a crash when rolling T3 Accessory Consume Ammo affix.

v0.3.1
Fixed modifier forge being able to forge when the fragments are not in the forge.
Fixed PVP debuffs not applying correctly.

v0.3.0
Added functions to the forge:
	Reforge without changing rarity.
	Raise Rarity.
	Add a random Affix/Prefix/Suffix.
	Remove all Affixes+Rarity/Suffix/Prefixes.
	Roll affix values without changing the tier.
Added a minimum amount of affixes that can roll for each rarity.
Changed the way crit chance affix text is displayed for clarity.
All stat affixes are now applied simultaneously per player.
Reduced chance for lifesteal to roll.
Reduced max lifesteal value from 20% to 10%.
Added melee lifesteal prefix.
Bosses always drop fragments.
Bosses drop x10 more fragments than normal enemies.